--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,13 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="sort_movies_by">Sort Movies By:</string>
+
+    <!-- Example text for the detailed movie layout -->
+    <string name="detail_movie_title">Minions</string>
+    <string name="detail_movie_overview">
+        Minions Stuart, Kevin and Bob are recruited by Scarlet Overkill, a super-villain who,
+        alongside her inventor husband Herb, hatches a plot to take over the world."
+    </string>
+    <string name="detail_vote_average">6.4</string>
+    <string name="detail_release_date">2015-06-17</string>
 </resources>
