--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="detail_movie_title">Minions</string>
     <string name="detail_movie_overview">
         Minions Stuart, Kevin and Bob are recruited by Scarlet Overkill, a super-villain who,
-        alongside her inventor husband Herb, hatches a plot to take over the world."
+        alongside her inventor husband Herb, hatches a plot to take over the world.
     </string>
     <string name="detail_vote_average">6.4</string>
     <string name="detail_release_date">2015-06-17</string>
@@ -18,7 +18,7 @@
     <string name="review_author">Andres Gomez</string>
     <string name="review_content">
         The minions are a nice idea and the animation and London recreation is really good,
-        but that's about it.\n\nThe script is boring and the jokes not really funny.
+        but that\'s about it.\n\nThe script is boring and the jokes not really funny.
     </string>
 
     <!-- Example text for the Trailer list item -->
